<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="Login"
    android:background="@color/primarybgcolor">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="30dp"
        android:scaleType="center"
        android:src="@drawable/hhh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardview"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#A5DEF1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="40dp">


            <EditText
                android:id="@+id/username"
                android:textColor="@color/login_btn_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                android:textColor="@color/login_btn_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <Button
                android:id="@+id/login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/login_btn_color"
                android:text="@string/action_sign_in"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:visibility="visible" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--<androidx.cardview.widget.CardView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="50dp"
        android:elevation="18dp"
        app:cardCornerRadius="60dp"
        android:backgroundTint="@android:color/transparent">
        <ImageView

            android:padding="6dp"
            android:layout_height="65dp"
            android:scaleType="centerInside"
            android:layout_width="65dp"
            android:id="@+id/imageView1"
            android:src="@drawable/home_icon"/>
    </androidx.cardview.widget.CardView>-->



    <com.github.pavlospt.CircleView
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="50dp"
        android:elevation="18dp"
        app:cardCornerRadius="60dp"
        app:cv_titleText=""
        app:cv_subtitleText=""
        app:cv_titleSize="32dp"
        app:cv_subtitleSize="12dp"
        app:cv_titleColor="@color/white"
        app:cv_subtitleColor="@color/white"
        app:cv_titleSubtitleSpace="20"
        app:cv_strokeColorValue="@color/login_btn_color"
        app:cv_backgroundColorValue="@color/primarybgcolor"
        app:cv_fillColor="@android:color/transparent"
        app:cv_fillRadius="0.9"
        app:cv_strokeWidthSize="5"/>

    <ImageView
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="6dp"
        android:layout_height="65dp"
        android:scaleType="centerInside"
        android:layout_width="65dp"
        android:id="@+id/imageView1"
        android:src="@drawable/home_icon"
        android:translationZ="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>